--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,4 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "env": {
-    "NEXT_PUBLIC_API_URL": "@next-public-api-url"
-  },
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_API_URL": "@next-public-api-url"
-    }
-  }
+  "buildCommand": "npm run build"
 }
